fix: relative navbar on mobile

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -2,11 +2,12 @@
   width: 100%;
   margin: 0;
   padding: 0;
+  display:flex;
+  justify-content: end;
 }
 
 .navbar-area {
   background: rgba(0, 0, 0, 0.9);
-  border-bottom: 1px rgba(0, 0, 0, 0.9);
 }
 
 .site-navbar {
@@ -39,10 +40,6 @@
 }
 
 @media screen and (max-width: 767px) {
-  
-  .site-navbar {
-    min-height: 60px;
-  }
 
   .site-navbar ul {
     position: absolute;
@@ -79,37 +76,42 @@
 }
 
 .menu-btn {
-  position: fixed;
-  color: white;
-  width: 40px;
-  height: 40px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0;
-  border-radius: 50%;
   background: transparent;
   border: none;
   cursor: pointer;
+  padding: 0;
+  margin-right: 12px;
+  color: white;
+}
+
+.topbar {
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
+  width: 100%;
+  height: 64px;
+  background-color: rgba(0, 0, 0, 0.9);
+  z-index: 10;
 }
 
 .top-menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
+  position: absolute;
+  top: 64px;
+  width: 100%;
   height: 0;
   overflow: hidden;
   background: rgba(0, 0, 0, 0.8);
-  color: white;
-  z-index: 2500;
+  backdrop-filter: blur(10px);
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: height 0.35s ease;
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
+  transition: height 0.35s ease, background 0.35s ease;
+  z-index: 1000;
 }
 
 .top-menu.open {
@@ -153,17 +155,4 @@
   .menu-btn {
     display: none;
   }
-}
-
-.topbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 64px;
-  display: flex;
-  align-items: center;
-  padding: 0 16px;
-  z-index: 3000;
-  background: black;
 }
